fix top spacing

--- a/app/assets/stylesheets/styles/giving_tuesday.scss
+++ b/app/assets/stylesheets/styles/giving_tuesday.scss
@@ -15,3 +15,9 @@
 #giving-tuesday-wrapper p {
     padding-bottom: 5px;
 }    
+
+
+#container-wrapper {
+    margin-top: 38px;
+}
+
